Refactor: corregir dependencias pom, remover deprecaciones MockBean y corregir advertencias